@@ -126,6 +126,11 @@ ru:
         few:   "больше {{count}} лет"
         many:  "больше {{count}} лет"
         other: "больше {{count}} лет"
+      almost_x_years:
+        one:   "почти {{count}} год"
+        few:   "почти {{count}} года"
+        many:  "почти {{count}} лет"
+        other: "почти {{count}} лет"
     prompts:
       year:   "Год"
       month:  "Месяц"
