@@ -2,9 +2,11 @@
 
 * Improve ActiveRecord translations [Dmitri Koulikoff]
 * Fix nested validation errors with custom error message hack for Rails < 2.3.4 [valodzka]
+* Added almost_x_years datetime translation
 
 * Улучшен перевод ActiveRecord [Dmitri Koulikoff]
 * Исправлена ошибка, возникающая при вложенных сообщениях валидации при использовании хака для Rails < 2.3.4 [valodzka]
+* Добавлен перевод для ключа даты/времени almost_x_years
 
 === 0.2.2 - 17.09.2008
 
